assignement_3/slurm-18689083.out
compiling application: HPC_BD_assignement3_18582431_15884392
HPC_BD_assignement3_18582431_15884392.c: In function ‘main’:
HPC_BD_assignement3_18582431_15884392.c:61:21: error: implicit declaration of function ‘ceil’ [-Wimplicit-function-declaration]
   61 |     int subM_rows = ceil((double)MATRIX_SIZE/m); // number of rows in sub-matrix without ghost cells
      |                     ^~~~
HPC_BD_assignement3_18582431_15884392.c:20:1: note: include ‘<math.h>’ or provide a declaration of ‘ceil’
   19 | #include <unistd.h>
  +++ |+#include <math.h>
   20 | 
HPC_BD_assignement3_18582431_15884392.c:61:21: warning: incompatible implicit declaration of built-in function ‘ceil’ [-Wbuiltin-declaration-mismatch]
   61 |     int subM_rows = ceil((double)MATRIX_SIZE/m); // number of rows in sub-matrix without ghost cells
      |                     ^~~~
HPC_BD_assignement3_18582431_15884392.c:61:21: note: include ‘<math.h>’ or provide a declaration of ‘ceil’
Running application: HPC_BD_assignement3_18582431_15884392
Allocated tasks: 256
Tasks per node: 128

CPUS:  1
Rank 0: matrix partitioning in 1 rows and 1 cols
Script finalised after 2 iterations after 0.000011 seconds
Final Matrix M after 2 iterations:
0 0 0 0 1 1 0 0 0 0 
0 0 1 0 0 0 0 1 0 0 
0 1 0 0 0 0 0 0 1 0 
0 0 0 0 0 0 0 0 0 0 
1 0 0 0 0 0 0 0 0 1 
1 0 0 0 0 0 0 0 0 1 
0 0 0 0 0 0 0 0 0 0 
0 1 0 0 0 0 0 0 1 0 
0 0 1 0 0 0 0 1 0 0 
0 0 0 0 1 1 0 0 0 0 
DONE 
CPUS:  2
Rank 0: matrix partitioning in 2 rows and 1 cols
Script finalised after 2 iterations after 0.000454 seconds
Final Matrix M after 2 iterations:
0 0 0 0 1 1 0 0 0 0 
0 0 1 0 0 0 0 1 0 0 
0 1 0 0 0 0 0 0 1 0 
0 0 0 0 0 0 0 0 0 0 
1 0 0 0 0 0 0 0 0 1 
1 0 0 0 0 0 0 0 0 1 
0 0 0 0 0 0 0 0 0 0 
0 1 0 0 0 0 0 0 1 0 
0 0 1 0 0 0 0 1 0 0 
0 0 0 0 1 1 0 0 0 0 
DONE 
CPUS:  4
Rank 0: matrix partitioning in 2 rows and 2 cols
Script finalised after 2 iterations after 0.000631 seconds
Final Matrix M after 2 iterations:
0 0 0 0 1 1 0 0 0 0 
0 0 1 0 0 0 0 1 0 0 
0 1 0 0 0 0 0 0 1 0 
0 0 0 0 0 0 0 0 0 0 
1 0 0 0 0 0 0 0 0 1 
1 0 0 0 0 0 0 0 0 1 
0 0 0 0 0 0 0 0 0 0 
0 1 0 0 0 0 0 0 1 0 
0 0 1 0 0 0 0 1 0 0 
0 0 0 0 1 1 0 0 0 0 
DONE 
CPUS:  8
Rank 0: matrix partitioning in 4 rows and 2 cols
Script finalised after 2 iterations after 0.000725 seconds
Final Matrix M after 2 iterations:
0 0 0 0 1 1 0 0 0 0 
0 0 1 0 0 0 0 1 0 0 
0 1 0 0 0 0 0 0 1 0 
0 0 0 0 0 0 0 0 0 0 
1 0 0 0 0 0 0 0 0 1 
1 0 0 0 0 0 0 0 0 1 
0 0 0 0 0 0 0 0 0 0 
0 1 1 0 0 0 0 1 1 0 
0 0 0 0 0 0 0 0 0 0 
0 0 0 0 0 0 0 0 0 0 
DONE 
